--- a/index.html
+++ b/index.html
@@ -172,7 +172,36 @@
                         <a href="https://codepen.io/xabinspb-the-sasster/full/OPPLyBm" target="_blank"><i class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
+                <div class="project">
+                    <img src="bootstrap1.png" alt="bootstrap-1">
+                    <div class="layer">
+                        <h3>Bootstrap 1</h3>
+                        <a href="https://eldersmp.github.io/bootstrap-1/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+                    </div>
+                </div>
+                <div class="project">
+                    <img src="bootstrap2.png" alt="bootstrap-2">
+                    <div class="layer">
+                        <h3>Bootstrap 2</h3>
+                        <a href="https://eldersmp.github.io/bootstrap-2/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+                    </div>
+                </div>
+                <div class="project">
+                    <img src="bootstrap3.png" alt="bootstrap-3">
+                    <div class="layer">
+                        <h3>Bootstrap 3</h3>
+                        <a href="https://eldersmp.github.io/bootstrap-3/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+                    </div>
+                </div>
+                <div class="project">
+                    <img src="bootstrap4.png" alt="bootstrap-4">
+                    <div class="layer">
+                        <h3>Bootstrap 4</h3>
+                        <a href="https://eldersmp.github.io/bootstrap-4/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+                    </div>
+                </div>
             </div>
+            
             <div class="btn-container">
                 <a href="#" class="btn" id="seeMoreBtn">See more</a>
             </div>
@@ -225,7 +254,6 @@
             document.getElementById(tabname).classList.add("active-tab");
         }
 
-        // Mobile menu functionality
         var sidemenu = document.getElementById("sidemenu");
         
         function openmenu() {
@@ -236,7 +264,6 @@
             sidemenu.style.right = "-200px";
         }
 
-        // See more button functionality
         document.getElementById("seeMoreBtn").addEventListener("click", function(e) {
             e.preventDefault();
             var hiddenProjects = document.getElementById("hiddenProjects");
